--- a/public/normalize.css
+++ b/public/normalize.css
@@ -10,7 +10,8 @@
 
 html {
   line-height: 1.15; /* 1 */
-  -webkit-text-size-adjust: 100%; /* 2 */
+  /* -webkit-text-size-adjust: 100%; 2 */
+  text-size-adjust: 100%; /* 2 */
 }
 
 /* Sections
@@ -85,6 +86,7 @@ a {
 abbr[title] {
   border-bottom: none; /* 1 */
   text-decoration: underline; /* 2 */
+  -webkit-text-decoration: underline dotted;
   text-decoration: underline dotted; /* 2 */
 }
 
@@ -199,6 +201,7 @@ button,
 [type="reset"],
 [type="submit"] {
   -webkit-appearance: button;
+  appearance: button;
 }
 
 /**
