--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,10 +1,9 @@
-@import url("colors.css");
+@import url("_variables.css");
 @import url("color-switcher.css");
 @import url("forms.css");
 @import url("layouts.css");
 @import url("buttons.css");
 @import url("print.css");
-@import url("snippets.css");
 @import url("collapse.css");
 @import url("header.css");
 @import url("card.css");
@@ -25,14 +24,18 @@
 
 html {
   /* font-size: 62.5%; */
-  /* font-size: 18px; */
+  font-size: 18px;
   scroll-behavior: smooth;
+  -ms-text-size-adjust: 100%;
+  -moz-text-size-adjust: 100%;
+  -o-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%;
+  text-size-adjust: 100%;
 }
 
 body {
   font-family: "Poppins", sans-serif;
   font-size: 16px;
-  background: transparent;
 }
 
 .sr-only {
@@ -53,6 +56,10 @@ ul {
   margin: 0;
 }
 
+.text-muted {
+  color: var(--clr-text-muted);
+}
+
 .hidden {
   display: none;
 }
@@ -61,16 +68,13 @@ ul {
   padding-top: var(--header-height);
   display: flex;
   flex-direction: column;
-  /* background: hsl(var(--bg-app)); */
-  background: hsla(var(--bg-app), 0.9);
-  transition: background 0.5 ease-in-out;
+  background: var(--bg-app) !important;
   height: 100vh;
   width: 100vw;
 }
 
 .scrollable-content {
   height: 100%;
-
   overflow: auto;
 }
 
