--- a/src/styles/card.css
+++ b/src/styles/card.css
@@ -8,14 +8,10 @@
 
 .card {
   overflow: hidden;
-
-  /* background-color: hsl(var(--clr-complementary)); */
-  background: rgba(255, 255, 255, 0.07);
+  background-color: var(--bg-header);
   border-radius: 0.75rem;
-  /* box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1); */
-  backdrop-filter: blur(45px);
-  border: 1px solid rgba(255, 255, 255, 0.3);
-  color: var(--clr-accent);
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
   height: fit-content;
   width: clamp(200px, 100%, 480px);
 }
@@ -26,10 +22,9 @@
 
 .card-header {
   padding: 0.75rem 1rem;
-  border-bottom: 1px solid var(--border);
-  color: hsla(var(--white), 0.75);
-  /* background: hsla(var(--blue), 50%, 0.1); */
+  color: var(--clr-text);
   width: 100%;
+  border-bottom: 2px solid var(--shadow);
   display: flex;
   align-items: center;
   text-transform: uppercase;
@@ -50,7 +45,6 @@
 .card-footer {
   padding: 0.75rem 1rem;
   width: 100%;
-  border-top: 1px solid hsla(var(--blue), 50%, 0.15);
   display: flex;
   align-items: center;
   justify-content: space-between;
