--- a/src/styles/color-switcher.css
+++ b/src/styles/color-switcher.css
@@ -3,16 +3,13 @@
   --clr-sun: hsl(58, 90%, 55%);
   --clr-cloud: hsl(205, 15%, 95%);
   --clr-star: hsla(0, 0%, 100%, 0.95);
-  /* --clr-crater: hsl(60, 0%, 87%); */
   --clr-crater: hsla(0, 0%, 50%, 0.1);
   --clr-crater-border: hsla(0, 0%, 0%, 0.1);
   --clr-sky-day: linear-gradient(to right, hsl(198, 78%, 86%), hsl(205, 85%, 90%));
   --clr-sky-night: linear-gradient(to right, hsl(230, 45%, 25%) 0%, hsl(245, 25%, 20%) 100%);
-  --border-container: hsla(200, 50%, 50%);
-  --toggle-size-x: calc(var(--header-height) * 1.75);
+  --border-container: hsla(200, 30%, 50%, 0.9);
+  --toggle-size-x: calc(var(--header-height) * 1.35);
   --toggle-size-y: calc(var(--header-height) / 1.75);
-  /* --toggle-size-x: 150px; */
-  /* --toggle-size-y: 64px; */
   --star-size-1: 1px;
   --star-size-2: 3px;
   --crater-size-1: 4px;
@@ -56,7 +53,6 @@
   border-style: solid;
   background-color: var(--clr-sun);
   border-radius: 100%;
-  /* box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3); */
   transition: transform 400ms cubic-bezier(0.68, -0.55, 0.265, 1.55);
   transform: rotate(-45deg);
 }
