--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -1,5 +1,4 @@
 .app-nav {
-  top: 0;
   z-index: 1;
   overflow: hidden;
   position: fixed;
@@ -9,12 +8,12 @@
   width: 100%;
   transition: var(--smooth);
   background: var(--bg-header);
-  box-shadow: 0 4px 30px var(--shadow);
+  box-shadow: 0 0.25rem 1rem var(--shadow);
   backdrop-filter: blur(0px);
-  color: var(--clr-text-title);
-  fill: var(--clr-text-title);
+  color: var(--clr-text);
+  fill: var(--clr-text);
   display: flex;
-  flex-wrap: wrap-reverse;
+  flex-wrap: wrap;
   flex-direction: row;
   padding: 0 2rem;
   line-height: 0;
@@ -39,6 +38,6 @@
 
 .github-icon {
   margin-left: 0.5rem;
-  height: calc(var(--header-height) - 1rem);
+  height: calc(var(--toggle-size-y));
   width: auto;
 }
