--- a/src/styles/layouts.css
+++ b/src/styles/layouts.css
@@ -8,6 +8,8 @@
   top: 0;
   left: 0;
   overflow: hidden;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
   width: fit-content;
   transition: cubic-bezier(0.4, 0, 0.2, 1) 1s;
   display: flex;
