--- a/src/styles/modal.css
+++ b/src/styles/modal.css
@@ -4,7 +4,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background: hsla(var(--blue), 10%, 0.4);
+  background: rgba(0, 0, 0, 0.35);
   z-index: 2;
   display: flex;
   justify-content: center;
@@ -25,7 +25,7 @@
   max-height: 90vh;
   overflow-y: auto;
   max-width: 540px;
-  background-color: rgb(255, 255, 255);
+  background: hsl(var(--white));
   border-radius: 6px;
 
   z-index: 2;
