--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -60,6 +60,14 @@ ul {
   color: var(--clr-text-muted);
 }
 
+.container > * {
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+}
+
+.container-row > * {
+}
+
 .hidden {
   display: none;
 }
