--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -13,6 +13,7 @@
 @import url("tabs.css");
 @import url("avatar.css");
 @import url("preview.css");
+@import url("toolbar.css");
 @import url("mobile.css");
 
 *,
@@ -70,6 +71,7 @@ ul {
 
 .hidden {
   display: none;
+  visibility: hidden;
 }
 
 .app {
@@ -115,27 +117,6 @@ ul {
   height: var(--progress-height);
 }
 
-/* Typography */
-
-.title {
-  font-weight: 600;
-  /* color: #334; */
-  color: var(--clr-text-title);
-  text-transform: uppercase;
-  text-align: center;
-  border-bottom: 1px solid var(--shadow);
-}
-
-.heading-2 {
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
-    "Helvetica Neue", sans-serif;
-  text-transform: uppercase;
-  font-weight: 500;
-  font-size: 1.125rem;
-  letter-spacing: 0.25px;
-  line-height: 22px;
-}
-
 .label {
   font-size: small;
   font-weight: 500;
@@ -165,11 +146,4 @@ ul {
 
 .chevron-closed {
   transform: rotate(-0deg);
-}
-.icon {
-  width: 20px;
-  height: 20px;
-  color: var(--primary);
-  fill: white;
-  /* font-weight: 800; */
 }
