--- a/src/styles/card.css
+++ b/src/styles/card.css
@@ -1,9 +1,11 @@
 .card-list {
-  padding: 1rem 0.5em;
+  padding: 1rem 0.75rem;
   display: grid;
   align-items: stretch;
-  justify-content: stretch;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  justify-items: stretch;
+  grid-auto-flow: row dense;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  grid-template-rows: auto;
   gap: 0.5rem;
 }
 
@@ -22,9 +24,9 @@
 }
 
 .card-header {
-  padding: 0.75rem 1rem;
+  padding: 0.25rem 0.75rem;
   color: var(--clr-text);
-  width: 100%;
+  width: auto;
   border-bottom: 2px solid var(--shadow);
   display: flex;
   flex-wrap: wrap;
@@ -34,7 +36,7 @@
 }
 
 .card-content {
-  padding: 1rem;
+  padding: 0rem 1rem;
 }
 
 .card-actions {
