fix some styles issues

--- a/src/styles/level.css
+++ b/src/styles/level.css
@@ -7,11 +7,10 @@
 
 .level-container {
   display: flex;
-  overflow: hidden;
 
   flex-direction: column;
-  width: clamp(48px, 100%, 250px);
-  height: clamp(64px, 100%, 250px);
+  width: clamp(220px, 250px, 300px);
+  height: auto;
 }
 
 .level-selector {
@@ -19,7 +18,7 @@
   position: relative;
   overflow: hidden;
   height: 3rem;
-  border-radius: 5px;
+  /* border-radius: 8px; */
   transform: translateX(0px);
   border: 1px solid var(--selected-thumb);
   background-color: var(--selected-background, var(--bg-input));
@@ -61,13 +60,12 @@
 }
 
 .thumb {
-  overflow: hidden;
   position: absolute;
   top: 0px;
   left: 0px;
   width: 25%;
   height: 100%;
-  border-radius: 0.25rem;
+  z-index: 1;
   background-color: var(--selected-thumb);
   transition: all 0.5s cubic-bezier(0.39, 0.575, 0.565, 1);
   transform: translateX(var(--position-thumb));
@@ -82,21 +80,21 @@
 
 .level-2 {
   --selected-background: hsl(var(--green), 85%);
-  --selected-thumb: hsl(var(--green), 65%);
-  --selected-thumb-hover: hsl(var(--green), 80%);
+  --selected-thumb: hsl(var(--green), 55%);
+  --selected-thumb-hover: hsl(var(--green), 70%);
   --position-thumb: 100%;
 }
 
 .level-3 {
   --selected-background: hsl(var(--blue), 85%);
-  --selected-thumb: hsl(var(--blue), 65%);
+  --selected-thumb: hsl(var(--blue), 55%);
   --selected-thumb-hover: hsl(var(--blue), 80%);
   --position-thumb: 200%;
 }
 
 .level-4 {
   --selected-background: hsl(var(--violet), 85%);
-  --selected-thumb: hsl(var(--violet), 65%);
+  --selected-thumb: hsl(var(--violet), 55%);
   --selected-thumb-hover: hsl(var(--violet), 80%);
   --position-thumb: 300%;
 }
