--- a/src/styles/collapse.css
+++ b/src/styles/collapse.css
@@ -8,7 +8,7 @@
 .collapse-container {
   display: flex;
   flex-direction: column;
-  padding: 0.5rem 0;
+  padding: 0.5rem 0.9rem;
   width: 100%;
   border-radius: 0.5rem;
   user-select: none;
