--- a/src/styles/_variables.css
+++ b/src/styles/_variables.css
@@ -1,13 +1,34 @@
 /* Variables */
-:root {
-  /* Palette */
+html {
+  --ff-family: "Fira Sans", sans-serif;
+  --ff-light: 300;
+  --ff-regular: 400;
+  --ff-medium: 500;
+  --ff-semibold: 600;
+  --ff-bold: 700;
+
+  /* fs base */
+  /* font-size: calc([minimum size] + ([maximum size] - [minimum size]) * ((100vw - [minimum viewport width]) / ([maximum viewport width] - [minimum viewport width]))); */
+  --fs-base: calc(1.4rem + (20 - 14) * ((100vw - 300px) / (1600 - 300)));
+  /* To test */
+  /* --fs-base: clamp(1rem, 0.67vw + 0.85rem, 1.25rem); */
+  /* --fs-base: 1.4rem; */
+  --fs-small: clamp(calc(var(--fs-base) * 0.8), 0.67vw + 0.85rem, 1.25rem);
+  /* --fs-small: clamp(0.88rem, 0.67vw + 0.73rem, 1.13rem); */
+  --fs-large: clamp(1.38rem, 1.67vw + 1rem, 2rem);
+  --fs-xxl: clamp(1.63rem, 2.33vw + 1rem, 2.5rem);
+  --fs-xxxl: clamp(2rem, 3vw + 1rem, 3rem);
+  --fs-xxxxl: clamp(2.5rem, 3.67vw + 1rem, 3.75rem);
+  /* --fs-4xl: clamp(2.5rem, 6vw + 1.15rem, 4.75rem); */
+
+  --lh-base: normal;
+  /*  */
   --yankees-blue: 226, 26%, 20%;
   --japanese-indigo: 222, 22%, 24%;
   --clr-accent: 216, 100%, 45%;
   --ghost-white: 210, 50%, 98%;
   --lavender: 0, 0%, 96%;
 
-  /* Basic colors */
   --black: 0, 0%, 0%;
   --white: 0, 0%, 100%;
   --green: 100, 65%;
@@ -17,17 +38,14 @@
   --violet: 260, 90%;
   --yellow: 60, 90%;
 
-  /* Dark light */
   --dark: 0, 0%, 30%;
   --light: 0, 0%, 90%;
   --grey: 220, 10%, 45%;
   --lightgrey: hsl(0, 0%, 27%);
 
-  /* Shadows and borders */
   --shadow: hsla(var(--black), 0.1);
   --border: hsla(var(--white), 0.2);
 
-  /* Typography */
   --clr-text: hsl(var(--black));
   --clr-text-light: hsl(var(--light));
   --clr-tex-dark: hsl(var(--dark));
@@ -35,23 +53,23 @@
   --clr-text-muted-dark: hsla(var(--grey));
 
   --bg-input: 222, 22%, 90%;
-
   --header-bg: 226 26% 90%;
-
   --smooth: all 0.5s 0s ease;
-
   --paper-background: rgb(244, 244, 244);
   --clr-placeholder: rgb(159, 166, 187);
   --clr-label: rgb(130, 139, 162);
-
   --bg-disabled: hsl(240, 10%, 95%);
   --clr-disabled: hsl(240, 10%, 80%);
+  --header-height: clamp(3rem, 4.8rem, 6.4rem);
 
-  --header-height: clamp(2.5rem, 3rem, 3.5rem);
+  --font-family: "Fira Sansss", sans-serif;
+  --fw-body-regular: 400;
+  --fw-body-bold: 700;
 }
 
 /* Color scheme toggle */
 .app[data-theme="dark"] {
+  color-scheme: dark;
   --bg-header: hsl(var(--yankees-blue));
   --bg-app: hsl(var(--japanese-indigo));
   --clr-text: hsla(var(--light), 0.95);
@@ -62,9 +80,11 @@
   --bg-collapse: hsla(var(--japanese-indigo));
   --border: hsla(var(--light), 0.2);
   --blue: 220, 70%;
+  --clr-placeholder: hsla(var(--light), 1);
 }
 
-.app[data-theme="light"] {
+.app[data-theme="light"],
+.app:not([data-theme]) {
   --bg-app: hsl(220, 29%, 85%);
   --bg-header: hsl(var(--header-bg));
   --bg-input: hsl(222, 40%, 87%);
